<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.isabel.loginuser.Registro"
    tools:showIn="@layout/activity_registro">


    <TextView
        android:id="@+id/nameTextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Nombre"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/nameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameTextview" />

    <TextView
        android:id="@+id/apellidoTextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameEdit"
        android:text="@string/Apellido"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/apellidoEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/apellidoTextview" />

    <TextView
        android:id="@+id/EmailTextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/apellidoEdit"
        android:text="@string/Email"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/EmailEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EmailTextview" />


    <TextView
        android:id="@+id/PasswordTextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EmailEdit"
        android:text="@string/Password"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/PasswordEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/PasswordTextview"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/ConfirmTextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/PasswordEdit"
        android:text="@string/Confirm"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/ConfirmEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ConfirmTextview"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/GuardarRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ConfirmEdit"
        android:layout_marginTop="50dp"
        android:text="@string/Guardar_Registro" />


</RelativeLayout>
